Help, Profile icon, languages horizontally aligned Profile icon background color removed (Not sure is it correct behaviour)

--- a/portal/code/tractus-x-portal/src/styles/App.css
+++ b/portal/code/tractus-x-portal/src/styles/App.css
@@ -1044,3 +1044,7 @@ mat-form-field .mat-input-placeholder {
     padding-left: 4px;
     color: #fff;
 }
+
+.profile_icon:hover{
+ background-color: white;
+}
